--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-ADMIN_USER=
-ADMIN_PASSWORD=
+ADMIN_USER=appadmn
+ADMIN_PASSWORD=password
+
+MEMBER_COUNT=6
+MIN_WINNING_NO=6
+MAX_WINNING_N0=10
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
